--- a/style.css
+++ b/style.css
@@ -1,7 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap');
 
-
-
 body{
     margin: 0;
 }
@@ -65,13 +63,52 @@ img {
     display: flex;
     flex-direction: column;
     padding: 10px 40px;
+    background-color: rgb(84, 84, 151);
+    background-size: auto;
 }
 
 h1 {
     font-size: 35px;
 }
 
-label{
-    
+form{
+    display: flex;
+    flex-direction: column;
+}
+
+label {
+    font-size: 20px;
+    padding: 5px;
+    color: white;
+}
+
+input{
+    background: none;
+    border: none;
+    margin-bottom: 25px;
+    color: white;
+    appearance: none;
+}
+
+input:hover {
+    background: none;
+    appearance: none;
+}
+
+.conf {
+    display: flex;
+    justify-content: center;
+}
+
+.button-reg {
+    width: 400px;
+    height: 200px;
+    font-weight: bold;
+    font-size: 35px;
+    border: none;
+    background-image: url(./assets-img/confirm.jpg);
+    background-size: 400px 200px;
+    border-radius: 5%;
+    cursor: pointer;
 }
 
