--- a/style.css
+++ b/style.css
@@ -80,7 +80,7 @@ form{
     background-color: rgba(0, 0, 0, 0.644);
     margin-top: 150px;
     padding: 30px;
-    color: ;
+    border-radius: 7px;
 }
 
 label {
@@ -95,6 +95,7 @@ input{
     margin-bottom: 25px;
     color: white;
     appearance: none;
+    border-radius: 4px;
 }
 
 .conf {
@@ -115,5 +116,7 @@ input{
     background: none;
     width: 25%;
     height: 40px;
-    
+    border-radius: 5px;
+    font-size: 18px;
+    font-weight: bold;
 }
